--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1069,7 +1069,7 @@ section.lazy-placeholder:after {
   -webkit-justify-content: center;
 }
 .cid-rWtye71qdG .card-wrapper .card-img .mbr-overlay {
-  background-color: #c1c1c1;
+  background-color: #232323;
   display: none;
   transition: opacity .3s;
 }
@@ -1086,7 +1086,7 @@ section.lazy-placeholder:after {
   width: 100%;
 }
 .cid-rWtye71qdG .card-wrapper .card-box {
-  background-color: #c1c1c1;
+  background-color: #232323;
   padding: 0 2rem 2rem 2rem;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
